@@ -1,6 +1,7 @@
 Sep 05 2002  2.5.2  Fixed client scrolling
                     Added client info pane
                     Finished first iteration of client panels
+                    Added total packets to statistics panel
 Sep 04 2002  2.5.2  Fixed killing server on exit glitch
                     Added client sorting
 Sep 03 2002  2.5.2  Initial client display panel ('c').  Lots left to be done.
